fix word wrap buttons

--- a/test/jtblue.css
+++ b/test/jtblue.css
@@ -45,6 +45,7 @@ ul.topnav li button {
 	padding: 14px 16px;
 	text-decoration: none;
 	font-weight: bold;
+	white-space: nowrap;
 	cursor: pointer;
 }
 
